Changelog
=========

1.0b9 (unreleased)
------------------

* Fix handling of unicode filenames when quoting the URL.
  [rossp]

* Added Spanish translations.
  [dukebody]

* Added german translations.
  [jbaumann]


1.0b8 (2010-10-01)
------------------

* Avoid showing validation errors during KSS validation, as the file is not
  uploaded in this case.
  [davisagli]

* Don't use the action from the request when the form submission succeeded.
  (In that case we always want "keep existing image")
  [davisagli]

1.0b7 (2010-08-05)
------------------

* Fix Wichert's previous fix to check ignoreContext the correct way.
  [davisagli]

1.0b6 (2010-05-17)
------------------

* Do not query the datamanager if we should ignore the context. Fixes
  http://code.google.com/p/dexterity/issues/detail?id=120
  [wichert]

1.0b5 (2010-04-19)
------------------

* Avoiding reading file uploads to determine their size.
  [wichert]

1.0b4 (2010-04-07)
------------------

* Rename nochange to action, since the field was being used to specify
  which action to take.
  [wichert]

* Disabled state was being applied to the wrong tag (span instead of the
  input) for images and files, and we're not using tabindex anymore.
  [limi]

1.0b3 (2010-01-25)
------------------

* Fix bug where fields that failed validation for requiredness mistakenly
  interpret the empty FileUpload in the request as a real value.
  [davisagli]

* Fix bug where fields were not validated for requiredness or field constraints.
  [davisagli]

* In lieu of real image scaling, at least make sure the thumbnail used on the
  image input widget has the correct aspect ratio.  Fixes
  http://code.google.com/p/dexterity/issues/detail?id=77
  [davisagli]

1.0b2 (2009-09-13)
------------------

* Make the widget more robust to validation errors elsewhere in the form.
  Fixes http://code.google.com/p/dexterity/issues/detail?id=76.
  [optilude]

1.0b1 (2009-08-02)
------------------
